--- a/keyverse-project/styles/_layout.scss
+++ b/keyverse-project/styles/_layout.scss
@@ -6,8 +6,15 @@ body {
     justify-content: center;
 }
 
-.piano {
+/*.piano {
     display: flex;
     align-items: center;
     position: relative;
+}*/
+.piano {
+    display: flex;
+    align-items: flex-start;
+    /* Align the black keys at the top */
+    position: relative;
+    margin: 20px auto;
 }
